--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hbs": "^4.0.4",
-    "mysql2": "^1.6.5"
+    "mysql2": "^1.6.5",
+    "serve-favicon": "^2.5.0"
   }
 }
